<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_tv_product"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_marginTop="28dp"
        android:text="@string/main_tv_product"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/main_btn_manager"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_btn_manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:onClick="onManagerClick"
        android:text="@string/main_btn_manager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_tv_total"
        android:layout_width="88dp"
        android:layout_height="24dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="76dp"
        android:text="@string/main_tv_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/main_btn_manager"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_manager" />

    <Button
        android:id="@+id/main_btn_buy"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:onClick="onBuyClick"
        android:text="@string/main_btn_buy"
        app:layout_constraintEnd_toEndOf="@+id/main_btn_manager"
        app:layout_constraintStart_toStartOf="@+id/main_tv_total"
        app:layout_constraintTop_toBottomOf="@+id/main_tv_total" />

    <NumberPicker
        android:id="@+id/main_np_main"
        android:layout_width="30dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="112dp"
        app:layout_constraintBottom_toBottomOf="@+id/main_tv_total"
        app:layout_constraintEnd_toEndOf="@+id/main_tv_product"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tv_product"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/main_tv_quantity"
        android:layout_width="89dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/main_tv_quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_np_main" />

    <ListView
        android:id="@+id/main_ll_products"
        android:layout_width="405dp"
        android:layout_height="149dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_buy"
        app:layout_constraintVertical_bias="0.986" />

</androidx.constraintlayout.widget.ConstraintLayout>